--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch src/debtors.json --port 1000"
+    "server": "json-server --watch src/customers.json --port 1000"
   },
   "dependencies": {
     "axios": "^1.7.7",
